--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 ## Basic Configuration
 
-baseurl = "https://fiznool.github.io/"
+baseurl = "/"
 builddrafts = false
 canonifyurls = false
 languageCode = "en-US"
