Use same permalink setup from old blog

--- a/config.toml
+++ b/config.toml
@@ -62,3 +62,6 @@ highlightjsstyle = "github"
     identifier = "hire-me"
     weight = 300
     url = "/hire-me/"
+
+[permalinks]
+    blog = "/blog/:year/:month/:day/:slug/"
