--- a/config.toml
+++ b/config.toml
@@ -15,8 +15,8 @@ title = "Tom Spencer"
 theme = "hugo-goa"
 
 ## Hugo Built-in Features
-# disqusShortname = "https-shenoybr-github-io-hugo-goa-demo" # Comment out to disable Disqus.
-googleAnalytics = "XYZ"
+disqusShortname = "fiznool-blog"
+googleAnalytics = "UA-35508451-1"
 enableRobotsTXT = true
 
 ## Site Settings
